<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<TableRow>
		<TextView
			android:text="@string/login_username"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<EditText
			android:id="@+id/login_view_username"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0" />
	</TableRow>

	<TableRow>
		<TextView
			android:text="@string/login_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<EditText
			android:id="@+id/login_view_password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:password="true" />
	</TableRow>

	<LinearLayout>
		<Button
			android:id="@+id/login_view_login"
			android:text="@string/login_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0" />

		<Button
			android:id="@+id/login_view_cancel"
			android:text="@string/login_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/login_view_progress"
		android:visibility="gone">
		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
			android:text="@string/login_is_logining"
			android:textSize="17.5sp"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:gravity="center" />
	</LinearLayout>

</TableLayout>